feat: Edit/Delete Greenhouse Marketplace Product
